storybook dark theme

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -65,6 +65,15 @@
     .dark-on .docblock-argstable-body tr:first-child td:last-child {
         border-top-right-radius: 0 !important;
     }
+
+    .dark-on [title="Reset controls"] {
+        background-color: rgba(0, 0, 0, .1);
+        box-shadow: #444444 0 0 0 1px inset;
+    }
+
+    .dark-on [title="Reset controls"]:hover {
+        background-color: rgba(0, 0, 0, .2);
+    }
 </style>
 
 <script>
