--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,6 +3,12 @@
         height: 100%;
     }
 
+    .lights-on body,
+    .lights-on .sbdocs-wrapper,
+    .lights-on .sbdocs-preview {
+        background: #ffffff;
+    }
+
     .dark-on body,
     .dark-on .sbdocs-wrapper,
     .dark-on .sbdocs-preview {
