docs: improve storybook docs

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,6 +2,14 @@
     html, body, #storybook-root {
         height: 100%;
     }
+
+    #storybook-docs table {
+        width: 100%;
+    }
+
+    #storybook-docs table:not(.sb-anchor, .sb-unstyled, .sb-unstyled table) tr:nth-of-type(2n){
+        background: none;
+    }
 </style>
 
 <script>
